--- a/index.html
+++ b/index.html
@@ -55,13 +55,26 @@
 
     <section class="homepage">
         <div class="homepage__container">
-            <img src="./assets/Homepage1.png" alt="" class="homepage__img">
+            <img src="./assets/Homepage1.png" alt="Imagem de Três músicos de uma banda de Rock no show"
+                class="homepage__img">
         </div>
         <div class="homepage__container">
             <h2 class="homepage__titulo">
                 <11 e 12 de Março>
             </h2>
             <h2 class="homepage__titulo">Aluródromo de São Paulo</h2>
+            <p class="homepage__texto">
+                Hora de programar nossa memória com novas lembranças! Uma nova experiência sobre música, linguagens e,
+                claro, tecnologia! Somos um festival diverso, com vários artistas e referências. Divirta-se!
+            </p>
+            <div class="homepage__botao">
+                <a href="#" class="homepage__link">Comprar ingresso!</a>
+                <img src="./assets/local_activity.svg" alt="Imagem do Ingresso">
+            </div>
+        </div>
+
+        <div class="homepage__container">
+
         </div>
     </section>
 
